--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.0"
+        def nav_version = "2.3.5"
+        classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:10.0.0"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +24,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter()
     }
 }
 
